fix : card custom 2 dark mode 수정

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -356,6 +356,10 @@ ul.network-icon .big-icon {
   }
 }
 
+.dark .card-title-2 a {
+  color: white; 
+}
+
 .card-subtitle-2 {
   font-size: 1rem;
   color: #666;
